2007-02-17  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=12733
        XPath namespace is attached to a wrong step

        * fast/xpath/namespace-vs-predicate-expected.txt: Added.
        * fast/xpath/namespace-vs-predicate.xhtml: Added.

2007-02-17  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Maciej.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12479
          ASSERTION FAILURE: resource->inCache() in WebCore::Cache::remove

        * fast/loader/resources/simultaneous-reloads-assert-frame.html: Added.
        * fast/loader/simultaneous-reloads-assert-expected.txt: Added.
        * fast/loader/simultaneous-reloads-assert.html: Added.

2007-02-16  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12780
          REGRESSION (r19341-r19385): Reproducible crash in "onselectstart" event

        * fast/events/shadow-boundary-crossing-expected.txt: Added.
        * fast/events/shadow-boundary-crossing.html: Added.

2007-02-16  Adele Peterson  <adele@apple.com>

        Reviewed by Mitz.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11534
        <rdar://problem/4946947> REGRESSION: Readonly text fields don't scroll when selecting content

        * fast/forms/input-readonly-autoscroll-expected.checksum: Added.
        * fast/forms/input-readonly-autoscroll-expected.png: Added.
        * fast/forms/input-readonly-autoscroll-expected.txt: Added.
        * fast/forms/input-readonly-autoscroll.html: Added.

2007-02-15  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        <rdar://problem/4989774>
        REGRESSION: Pasting a image into a plain text message can place image on a new line

        Added:
        * editing/pasteboard/4989774-expected.checksum: Added.
        * editing/pasteboard/4989774-expected.png: Added.